Simplify code.
Signed-off-by: Danny Baumann <dannybaumann@web.de>